--- a/fj21-agenda/WebContent/WEB-INF/web.xml
+++ b/fj21-agenda/WebContent/WEB-INF/web.xml
@@ -39,5 +39,14 @@ br.com.caelum.servlet.AdicionaContatoServlet
 <url-pattern>/adicionaContato</url-pattern>
 </servlet-mapping>
 
+<error-page>
+	<exception-type>java.lang.Exception</exception-type>
+	<location>/erro.html</location>
+</error-page>
+<error-page>
+<error-code>404</error-code>
+<location>/404.html</location>
+</error-page>
+
 </web-app>
 
